packages/dartcv/src/gapi/gapi.h

// Graph API: Math operations
// https://docs.opencv.org/4.10.0/da/dd3/group__gapi__math.html#ga3fec036f5cf3f6cb8c2633c109085f0b
CvStatus *gapi_add(GMat src1, GMat src2, int ddepth, GMat *rval);
CvStatus *gapi_addC(GMat src, GScalar c, int ddepth, GMat *rval);
CvStatus *gapi_addC_1(GScalar c, GMat src, int ddepth, GMat *rval);
CvStatus *gapi_cartToPolar(GMat x, GMat y, bool angleInDegrees, GMat *rval, GMat *rval1);
// Graph API: Image filters
// https://docs.opencv.org/4.10.0/da/dc5/group__gapi__filters.html
CvStatus *gapi_bilateralFilter(const GMat src, int d, double sigmaColor, double sigmaSpace, int borderType,
                               GMat *rval);
CvStatus *gapi_blur(const GMat src, const CvSize ksize, const CvPoint anchor, int borderType,
                    const Scalar borderValue, GMat *rval);
CvStatus *gapi_boxFilter(const GMat src, int dtype, const CvSize ksize, const CvPoint anchor, bool normalize,
                         int borderType, const Scalar borderValue, GMat *rval);
CvStatus *gapi_dilate(const GMat src, const Mat kernel, const CvPoint anchor, int iterations, int borderType,
                      const Scalar borderValue, GMat *rval);
CvStatus *gapi_dilate3x3(const GMat src, int iterations, int borderType, const Scalar borderValue,
                         GMat *rval);
CvStatus *gapi_Sobel(const GMat src, int ddepth, int dx, int dy, int ksize, double scale, double delta,
                     int borderType, const Scalar borderValue, GMat *rval);
CvStatus *gapi_SobelXY(const GMat src, int ddepth, int order, int ksize, double scale, double delta,
                       int borderType, const Scalar borderValue, GMat *rval, GMat *rval1);
CvStatus *gapi_YUV2BGR(const GMat src, GMat *rval);
CvStatus *gapi_YUV2RGB(const GMat src, GMat *rval);
// Graph API: Image Structural Analysis and Shape Descriptors
CvStatus *gapi_boundingRect(const GArrayPoint2f src, GOpaqueRect *rval);
CvStatus *gapi_boundingRect_1(const GArrayPoint2i src, GOpaqueRect *rval);
CvStatus *gapi_boundingRect_2(const GMat src, GOpaqueRect *rval);
// Graph API: Image and channel composition functions
CvStatus *gapi_concatHor(const GMat src1, const GMat src2, GMat *rval);
// CvStatus *gapi_concatHor_1(const VecGMat v, GMat *rval);
CvStatus *gapi_concatVert(const GMat src1, const GMat src2, GMat *rval);
// CvStatus *gapi_concatVert_2(const VecGMat v, GMat *rval);
CvStatus *gapi_convertTo(const GMat src, int rdepth, double alpha, double beta, GMat *rval);
// CvStatus *gapi_copy(const GFrame in, GFrame *rval);
CvStatus *gapi_copy_1(const GMat in, GMat *rval);
CvStatus *gapi_crop(const GMat src, const CvRect rect, GMat *rval);