packages/dartcv/lib/src/g/gapi.g.dart


  late final _gapi_SobelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              Scalar,
              ffi.Pointer<GMat>)>>('gapi_Sobel');
  late final _gapi_Sobel = _gapi_SobelPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, int, int, int, int, double, double,
          int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_SobelXY(
    GMat src,
    int ddepth,
    int order,
    int ksize,
    double scale,
    double delta,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
    ffi.Pointer<GMat> rval1,
  ) {
    return _gapi_SobelXY(
      src,
      ddepth,
      order,
      ksize,
      scale,
      delta,
      borderType,
      borderValue,
      rval,
      rval1,
    );
  }

  late final _gapi_SobelXYPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Double,
              ffi.Int,
              Scalar,
              ffi.Pointer<GMat>,
              ffi.Pointer<GMat>)>>('gapi_SobelXY');
  late final _gapi_SobelXY = _gapi_SobelXYPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, int, int, int, double, double, int,
          Scalar, ffi.Pointer<GMat>, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_YUV2BGR(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_YUV2BGR(
      src,
      rval,
    );
  }

  late final _gapi_YUV2BGRPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_YUV2BGR');
  late final _gapi_YUV2BGR = _gapi_YUV2BGRPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_YUV2RGB(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_YUV2RGB(
      src,
      rval,
    );
  }

  late final _gapi_YUV2RGBPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_YUV2RGB');
  late final _gapi_YUV2RGB = _gapi_YUV2RGBPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_add(
    GMat src1,
    GMat src2,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_add(
      src1,
      src2,
      ddepth,
      rval,
    );
  }

  late final _gapi_addPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Int, ffi.Pointer<GMat>)>>('gapi_add');
  late final _gapi_add = _gapi_addPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_addC(
    GMat src,
    GScalar c,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_addC(
      src,
      c,
      ddepth,
      rval,
    );
  }

  late final _gapi_addCPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GScalar, ffi.Int, ffi.Pointer<GMat>)>>('gapi_addC');
  late final _gapi_addC = _gapi_addCPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GScalar, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_addC_1(
    GScalar c,
    GMat src,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_addC_1(
      c,
      src,
      ddepth,
      rval,
    );
  }

  late final _gapi_addC_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GScalar, GMat, ffi.Int, ffi.Pointer<GMat>)>>('gapi_addC_1');
  late final _gapi_addC_1 = _gapi_addC_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GScalar, GMat, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_bilateralFilter(
    GMat src,
    int d,
    double sigmaColor,
    double sigmaSpace,
    int borderType,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_bilateralFilter(
      src,
      d,
      sigmaColor,
      sigmaSpace,
      borderType,
      rval,
    );
  }

  late final _gapi_bilateralFilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Double, ffi.Double,
              ffi.Int, ffi.Pointer<GMat>)>>('gapi_bilateralFilter');
  late final _gapi_bilateralFilter = _gapi_bilateralFilterPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, double, double, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_blur(
    GMat src,
    CvSize ksize,
    CvPoint anchor,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_blur(
      src,
      ksize,
      anchor,
      borderType,
      borderValue,
      rval,
    );
  }

  late final _gapi_blurPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, CvSize, CvPoint, ffi.Int, Scalar,
              ffi.Pointer<GMat>)>>('gapi_blur');
  late final _gapi_blur = _gapi_blurPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, CvSize, CvPoint, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_boundingRect(
    GArrayPoint2f src,
    ffi.Pointer<GOpaqueRect> rval,
  ) {
    return _gapi_boundingRect(
      src,
      rval,
    );
  }

  late final _gapi_boundingRectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GArrayPoint2f, ffi.Pointer<GOpaqueRect>)>>('gapi_boundingRect');
  late final _gapi_boundingRect = _gapi_boundingRectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GArrayPoint2f, ffi.Pointer<GOpaqueRect>)>();

  ffi.Pointer<CvStatus> gapi_boundingRect_1(
    GArrayPoint2i src,
    ffi.Pointer<GOpaqueRect> rval,
  ) {
    return _gapi_boundingRect_1(
      src,
      rval,
    );
  }

  late final _gapi_boundingRect_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GArrayPoint2i, ffi.Pointer<GOpaqueRect>)>>('gapi_boundingRect_1');
  late final _gapi_boundingRect_1 = _gapi_boundingRect_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GArrayPoint2i, ffi.Pointer<GOpaqueRect>)>();

  ffi.Pointer<CvStatus> gapi_boundingRect_2(
    GMat src,
    ffi.Pointer<GOpaqueRect> rval,
  ) {
    return _gapi_boundingRect_2(
      src,
      rval,
    );
  }

  late final _gapi_boundingRect_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GOpaqueRect>)>>('gapi_boundingRect_2');
  late final _gapi_boundingRect_2 = _gapi_boundingRect_2Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GOpaqueRect>)>();

  ffi.Pointer<CvStatus> gapi_boxFilter(
    GMat src,
    int dtype,
    CvSize ksize,
    CvPoint anchor,
    bool normalize,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_boxFilter(
      src,
      dtype,
      ksize,
      anchor,
      normalize,
      borderType,
      borderValue,
      rval,
    );
  }

  late final _gapi_boxFilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, CvSize, CvPoint,
              ffi.Bool, ffi.Int, Scalar, ffi.Pointer<GMat>)>>('gapi_boxFilter');
  late final _gapi_boxFilter = _gapi_boxFilterPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, CvSize, CvPoint, bool, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_cartToPolar(
    GMat x,
    GMat y,
    bool angleInDegrees,
    ffi.Pointer<GMat> rval,
    ffi.Pointer<GMat> rval1,
  ) {
    return _gapi_cartToPolar(
      x,
      y,
      angleInDegrees,
      rval,
      rval1,
    );
  }

  late final _gapi_cartToPolarPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Bool,
              ffi.Pointer<GMat>, ffi.Pointer<GMat>)>>('gapi_cartToPolar');
  late final _gapi_cartToPolar = _gapi_cartToPolarPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, GMat, bool, ffi.Pointer<GMat>, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_concatHor(
    GMat src1,
    GMat src2,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_concatHor(
      src1,
      src2,
      rval,
    );
  }

  late final _gapi_concatHorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Pointer<GMat>)>>('gapi_concatHor');
  late final _gapi_concatHor = _gapi_concatHorPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_concatVert(
    GMat src1,
    GMat src2,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_concatVert(
      src1,
      src2,
      rval,
    );
  }

  late final _gapi_concatVertPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Pointer<GMat>)>>('gapi_concatVert');
  late final _gapi_concatVert = _gapi_concatVertPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_convertTo(
    GMat src,
    int rdepth,
    double alpha,
    double beta,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_convertTo(
      src,
      rdepth,
      alpha,
      beta,
      rval,
    );
  }

  late final _gapi_convertToPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Double, ffi.Double,
              ffi.Pointer<GMat>)>>('gapi_convertTo');
  late final _gapi_convertTo = _gapi_convertToPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, int, double, double, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_copy_1(
    GMat in$,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_copy_1(
      in$,
      rval,
    );
  }

  late final _gapi_copy_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_copy_1');
  late final _gapi_copy_1 = _gapi_copy_1Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_crop(
    GMat src,
    CvRect rect,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_crop(
      src,
      rect,
      rval,
    );
  }

  late final _gapi_cropPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, CvRect, ffi.Pointer<GMat>)>>('gapi_crop');
  late final _gapi_crop = _gapi_cropPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, CvRect, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_dilate(
    GMat src,
    Mat kernel,
    CvPoint anchor,
    int iterations,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_dilate(
      src,
      kernel,
      anchor,
      iterations,
      borderType,
      borderValue,
      rval,
    );
  }

  late final _gapi_dilatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, Mat, CvPoint, ffi.Int, ffi.Int,
              Scalar, ffi.Pointer<GMat>)>>('gapi_dilate');
  late final _gapi_dilate = _gapi_dilatePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, Mat, CvPoint, int, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_dilate3x3(
    GMat src,
    int iterations,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_dilate3x3(
      src,
      iterations,
      borderType,
      borderValue,
      rval,
    );
  }
